<resources>
    <string name="app_name">Happy Places App</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">Save</string>
    <string name="fab_activity_main_content_desc">Floating action button to add happy places</string>
    <string name="tv_no_data">There are no data available</string>
    <string name="activity_happy_place_detail_image_description">Happy place thumbnail</string>
    <string name="google_maps_api_key">AIzaSyC3aBMeGMXGh_CUABk6YoV6WlVmvN8DNwc</string>
    <string name="add_places_activity_button_update">UPDATE</string>
    <string name="btn_view_location_text">View Location</string>
    <string name="btn_activity_add_places_select_current_loc">SELECT CURRENT LOCATION</string>
</resources>