<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".AddPlacesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/til_title"
                app:layout_constraintStart_toStartOf="@+id/til_title"
                app:layout_constraintTop_toBottomOf="@+id/til_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/til_description"
                app:layout_constraintStart_toStartOf="@+id/til_description"
                app:layout_constraintTop_toBottomOf="@+id/til_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/til_date"
                app:layout_constraintStart_toStartOf="@+id/til_date"
                app:layout_constraintTop_toBottomOf="@+id/til_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:scaleType="centerInside"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/tv_add_image"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/til_location"
                app:layout_constraintTop_toBottomOf="@id/til_location"
                app:srcCompat="@drawable/ic_image_24" />

            <TextView
                android:id="@+id/tv_add_image"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_thumbnail"
                app:layout_constraintEnd_toEndOf="@+id/til_location"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toTopOf="@+id/iv_thumbnail" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="@+id/tv_add_image"
                app:layout_constraintStart_toStartOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>